# tpchr

./: .Rbuildignore  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md  TPC_EULA  appveyor.yml  bcd2.c  bm_utils.c  build.c  build_inst  config.h  driver.c  dss.h  dsstypes.h  load_stub.c  makefile  permute.c  print.c  qgen.c  rnd.c  rnd.h  rng64.h  shared.h  speed_seed.c  text.c  tpcd.h  varsub.c
R/: dplyr.R  dt.R  tpch.R
inst/extdata/answers/sf0.1/: q10.ans  q2.ans
inst/extdata/queries/: q1.sql  q10.sql  q15.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql
man/: dbgen.Rd  test_dbi.Rd  test_dplyr.Rd  test_dt.Rd
src/: Makevars  bcd2.c  bcd2.h  bm_utils.c  config.h  driver.c  dss.h  permute.c  permute.h  rnd.c  rnd.h  rstuff.c  speed_seed.c  text.c
tests/: testthat.R
tests/testthat/: test_01.R  test_01_df.R  test_02_monetdblite.R
